[gd_scene load_steps=16 format=2]

[ext_resource path="res://assests/libraries/Ui/Menu.png" type="Texture" id=1]
[ext_resource path="res://assests/libraries/Ui/Home.png" type="Texture" id=2]
[ext_resource path="res://assests/libraries/pkmnfl.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI UX/Pc.gd" type="Script" id=4]
[ext_resource path="res://assests/libraries/Ui/Settings.png" type="Texture" id=5]
[ext_resource path="res://assests/libraries/Ui/Pokeball.png" type="Texture" id=6]
[ext_resource path="res://assests/libraries/Ui/Item.png" type="Texture" id=7]
[ext_resource path="res://assests/libraries/Ui/Mobile.png" type="Texture" id=8]
[ext_resource path="res://UI UX/Pokemon.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0431373, 0.0156863, 0.164706, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 10
anti_aliasing_size = 0.01

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0431373, 0.0156863, 0.164706, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing_size = 0.01

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/HBoxContainer:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 18, 160 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/HBoxContainer/Sidebar/VBoxContainer:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 18, 160 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/HBoxContainer/Sidebar:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 18, 160 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/HBoxContainer/Top_bar/Top_bar:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control/HBoxContainer/Top_bar/Top_bar:rect_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 222, 18 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Control/HBoxContainer/Top_bar/Top_bar:rect_min_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 222, 18 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Control/HBoxContainer/Top_bar:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 18, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Control/HBoxContainer/Top_bar:rect_size")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 222, 18 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Control/HBoxContainer/Top_bar:rect_scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.843, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Side_bar_anim"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Control/HBoxContainer:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 18, 160 ), Vector2( 53, 160 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/HBoxContainer/Sidebar/VBoxContainer:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 18, 160 ), Vector2( 53, 160 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/HBoxContainer/Sidebar:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 18, 160 ), Vector2( 53, 160 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/HBoxContainer/Top_bar:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 18, 0 ), Vector2( 53, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control/HBoxContainer/Top_bar:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.842, 1 ) ]
}

[node name="Pc" type="CanvasLayer"]
layer = 23
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
margin_right = 240.0
margin_bottom = 160.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0588235, 0.0235294, 0.231373, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
margin_right = 240.0
margin_bottom = 160.0
custom_constants/separation = 0

[node name="Sidebar" type="Panel" parent="Control/HBoxContainer"]
margin_right = 18.0
margin_bottom = 160.0
rect_min_size = Vector2( 18, 160 )
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/Sidebar"]
margin_right = 18.0
margin_bottom = 160.0
rect_min_size = Vector2( 18, 0 )
rect_clip_content = true
mouse_filter = 2

[node name="Top_container" type="VBoxContainer" parent="Control/HBoxContainer/Sidebar/VBoxContainer"]
margin_right = 18.0
margin_bottom = 134.0
rect_min_size = Vector2( 18, 18 )
rect_clip_content = true
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Toggle" type="Control" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container/Toggle"]
margin_right = 53.0
margin_bottom = 18.0
mouse_filter = 2
color = Color( 1, 0, 0.72549, 0.721569 )

[node name="ColorRect2" type="ColorRect" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container/Toggle"]
margin_left = 50.0
margin_right = 53.0
margin_bottom = 18.0
mouse_filter = 2
color = Color( 1, 0, 0.72549, 1 )

[node name="Menu" type="Sprite" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container/Toggle"]
scale = Vector2( 1.05882, 1.05882 )
texture = ExtResource( 1 )
centered = false

[node name="Home" type="Control" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container"]
margin_top = 18.0
margin_right = 18.0
margin_bottom = 36.0
rect_min_size = Vector2( 18, 18 )

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container/Home"]
margin_right = 53.0
margin_bottom = 18.0
color = Color( 0.0431373, 0.0156863, 0.164706, 1 )

[node name="ColorRect2" type="ColorRect" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container/Home"]
margin_left = 50.0
margin_right = 53.0
margin_bottom = 18.0
mouse_filter = 2
color = Color( 1, 0, 0.72549, 1 )

[node name="Sprite" type="Sprite" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container/Home"]
scale = Vector2( 1.05882, 1.05882 )
texture = ExtResource( 2 )
centered = false

[node name="Label" type="Label" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container/Home"]
margin_left = 22.0
margin_top = 4.0
margin_right = 46.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 2 )
text = "Home"

[node name="Pokemons" type="Control" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container"]
margin_top = 36.0
margin_right = 18.0
margin_bottom = 54.0
rect_min_size = Vector2( 18, 18 )

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container/Pokemons"]
margin_right = 53.0
margin_bottom = 18.0
color = Color( 0.0431373, 0.0156863, 0.164706, 1 )

[node name="ColorRect2" type="ColorRect" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container/Pokemons"]
margin_left = 50.0
margin_right = 53.0
margin_bottom = 18.0
mouse_filter = 2
color = Color( 1, 0, 0.72549, 1 )

[node name="Sprite" type="Sprite" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container/Pokemons"]
texture = ExtResource( 6 )
centered = false

[node name="Label" type="Label" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container/Pokemons"]
margin_left = 22.0
margin_top = 6.0
margin_right = 67.0
margin_bottom = 15.0
rect_scale = Vector2( 0.583063, 0.644036 )
custom_fonts/font = SubResource( 2 )
text = "Pkmn"

[node name="Items" type="Control" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container"]
margin_top = 54.0
margin_right = 18.0
margin_bottom = 72.0
rect_min_size = Vector2( 18, 18 )

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container/Items"]
margin_right = 53.0
margin_bottom = 18.0
color = Color( 0.0431373, 0.0156863, 0.164706, 1 )

[node name="ColorRect2" type="ColorRect" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container/Items"]
margin_left = 50.0
margin_right = 53.0
margin_bottom = 18.0
mouse_filter = 2
color = Color( 1, 0, 0.72549, 1 )

[node name="Sprite" type="Sprite" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container/Items"]
scale = Vector2( 1.05882, 1.05882 )
texture = ExtResource( 7 )
centered = false

[node name="Label" type="Label" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container/Items"]
margin_left = 22.0
margin_top = 4.0
margin_right = 46.0
margin_bottom = 13.0
rect_scale = Vector2( 0.871862, 0.937912 )
custom_fonts/font = SubResource( 2 )
text = "Items"

[node name="Call" type="Control" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container"]
margin_top = 72.0
margin_right = 18.0
margin_bottom = 90.0
rect_min_size = Vector2( 18, 18 )

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container/Call"]
margin_right = 53.0
margin_bottom = 18.0
color = Color( 0.0431373, 0.0156863, 0.164706, 1 )

[node name="ColorRect2" type="ColorRect" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container/Call"]
margin_left = 50.0
margin_right = 53.0
margin_bottom = 18.0
mouse_filter = 2
color = Color( 1, 0, 0.72549, 1 )

[node name="Sprite" type="Sprite" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container/Call"]
scale = Vector2( 1.05882, 1.05882 )
texture = ExtResource( 8 )
centered = false

[node name="Label" type="Label" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Top_container/Call"]
margin_left = 22.0
margin_top = 4.0
margin_right = 46.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 2 )
text = "Call"

[node name="Bottom_container" type="VBoxContainer" parent="Control/HBoxContainer/Sidebar/VBoxContainer"]
margin_top = 138.0
margin_right = 18.0
margin_bottom = 156.0
rect_min_size = Vector2( 0, 18 )
rect_clip_content = true

[node name="Settings" type="Control" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Bottom_container"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Bottom_container/Settings"]
margin_right = 53.0
margin_bottom = 18.0
mouse_filter = 2
color = Color( 0.0431373, 0.0156863, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect2" type="ColorRect" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Bottom_container/Settings"]
margin_left = 50.0
margin_right = 53.0
margin_bottom = 18.0
mouse_filter = 2
color = Color( 1, 0, 0.72549, 1 )

[node name="TextureRect" type="TextureRect" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Bottom_container/Settings"]
margin_left = 2.0
margin_top = 2.0
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 18, 18 )
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Control/HBoxContainer/Sidebar/VBoxContainer/Bottom_container/Settings"]
anchor_top = 0.111111
anchor_bottom = 0.111111
margin_left = 22.0
margin_top = 4.0
margin_right = 63.0
margin_bottom = 13.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 2 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Control" type="Control" parent="Control/HBoxContainer/Sidebar/VBoxContainer"]
margin_top = 160.0
margin_right = 18.0
margin_bottom = 160.0

[node name="Top_bar" type="VBoxContainer" parent="Control/HBoxContainer"]
margin_left = 18.0
margin_right = 240.0
margin_bottom = 18.0
rect_scale = Vector2( 0.843, 1 )

[node name="Top_bar" type="Panel" parent="Control/HBoxContainer/Top_bar"]
margin_right = 222.0
margin_bottom = 18.0
rect_min_size = Vector2( 222, 18 )
custom_styles/panel = SubResource( 5 )

[node name="Home" type="Control" parent="Control"]
margin_left = 18.0
margin_top = 18.0
margin_right = 240.0
margin_bottom = 160.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Home"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -41.0
margin_top = 30.0
margin_right = 39.0
margin_bottom = -34.0
custom_constants/separation = 2

[node name="My_pc" type="ColorRect" parent="Control/Home/VBoxContainer"]
margin_right = 80.0
margin_bottom = 18.0
rect_min_size = Vector2( 0, 18 )
color = Color( 0.0431373, 0.0156863, 0.164706, 1 )

[node name="Label" type="Label" parent="Control/Home/VBoxContainer/My_pc"]
margin_top = -3.0
margin_right = 80.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 6 )
text = "My pc"
align = 1
valign = 1

[node name="Pokemon_pc" type="ColorRect" parent="Control/Home/VBoxContainer"]
margin_top = 20.0
margin_right = 80.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 18 )
color = Color( 0.0431373, 0.0156863, 0.164706, 1 )

[node name="Label" type="Label" parent="Control/Home/VBoxContainer/Pokemon_pc"]
margin_top = -3.0
margin_right = 80.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 6 )
text = "Pokemon pc"
align = 1
valign = 1

[node name="Call_someone" type="ColorRect" parent="Control/Home/VBoxContainer"]
margin_top = 40.0
margin_right = 80.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 18 )
color = Color( 0.0431373, 0.0156863, 0.164706, 1 )

[node name="Label" type="Label" parent="Control/Home/VBoxContainer/Call_someone"]
margin_top = -3.0
margin_right = 80.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 6 )
text = "Call_someone"
align = 1
valign = 1

[node name="Back" type="ColorRect" parent="Control/Home/VBoxContainer"]
margin_top = 60.0
margin_right = 80.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 18 )
color = Color( 0.0431373, 0.0156863, 0.164706, 1 )

[node name="Label" type="Label" parent="Control/Home/VBoxContainer/Back"]
margin_top = -3.0
margin_right = 80.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 6 )
text = "Quit"
align = 1
valign = 1

[node name="Pokemon" type="Control" parent="Control"]
margin_left = 33.0
margin_top = 25.0
margin_right = 240.0
margin_bottom = 160.0
script = ExtResource( 10 )

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Pokemon"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="Control/Pokemon/ScrollContainer"]
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/Side_bar_anim = SubResource( 3 )
